working on responsive design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- meta tags for being 100 in SEO section of Lighthouse -->
+    <meta name="description" content="my module2-solution exam" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="Masoud Gharedaghi" />
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <!-- including Raleway font from google fonts CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Module2_Solution</title>
   </head>
-  <body></body>
+  <body>
+    <section class="container">
+      <h1 class="section-title">Our Menu</h1>
+      <section class="articles">
+        <article class="chicken">
+          <h2 class="article-title">chicken</h2>
+          <p class="article-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+            consectetur deserunt odit quasi minus facere? Ut odio ea architecto
+            ipsa a quia maxime recusandae distinctio iste voluptatem, eaque ab
+            ex!
+          </p>
+        </article>
+        <article class="beef">
+          <h2 class="article-title">beef</h2>
+          <p class="article-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+            consectetur deserunt odit quasi minus facere? Ut odio ea architecto
+            ipsa a quia maxime recusandae distinctio iste voluptatem, eaque ab
+            ex!
+          </p>
+        </article>
+        <article class="sushi">
+          <h2 class="article-title">sushi</h2>
+          <p class="article-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+            consectetur deserunt odit quasi minus facere? Ut odio ea architecto
+            ipsa a quia maxime recusandae distinctio iste voluptatem, eaque ab
+            ex!
+          </p>
+        </article>
+      </section>
+    </section>
+  </body>
 </html>
