--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- meta tags for being 100 in SEO section of Lighthouse -->
+    <!-- meta tags for reach 100% in SEO section of Lighthouse -->
     <meta name="description" content="my module2-solution exam" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Masoud Gharedaghi" />
